2010-10-29  Brian Gough  <bjg@gnu.org>

	* hyperg_U.c (hyperg_U_small_a_bgt0): corrected result->err for
	case where a==0.0

2010-08-31  Brian Gough  <bjg@network-theory.co.uk>

	* beta_inc.c (gsl_sf_beta_inc_e): ignore underflow error when term
	is subtracted from 1

2010-08-27  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_2F1.c (gsl_sf_hyperg_2F1_e): use ap and bp consistently
	in large c and large b cases, previously mixed a,b and ap,bp.

2010-04-15  Brian Gough  <bjg@network-theory.co.uk>

	* atanint.c (gsl_sf_atanint_e): added missing term 1/ax for large x

2010-02-25  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_U.c (hyperg_U_negx): handle the case where x<0

2010-01-23  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_1F1.c (gsl_sf_hyperg_1F1_e): use Kummer transformation
	for larger range of x when b>a and a<0

2009-07-17  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_U.c (hyperg_U_series): use a rearrangement of the factor
	in front of the series to avoid incorrect termination when the
	the leading term is zero.

2009-07-16  Brian Gough  <bjg@network-theory.co.uk>

	* poch.c (gsl_sf_lnpoch_sgn_e): handle negative and zero values of
	a, e.g. where gamma(a) and/or gamma(a+x) is infinite
	(gsl_sf_poch_e): handle the case where lnpoch_sgn returns
	GSL_NEGINF when the Pochhammer ratio is zero.

	* test_gamma.c (test_gamma): added tests for poch(a,x) with
	negative arguments

2009-07-12  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_U.c (hyperg_U_int_bge1): avoid using the series when
	1+a-b is zero or a negative integer.

2009-07-11  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_U.c (gsl_sf_hyperg_U_int_e10_e, gsl_sf_hyperg_U_e10_e)
	(hyperg_U_origin, hyperg_U_int_origin): added special case for
	U(a,b,z=0).

2009-07-09  Brian Gough  <bjg@network-theory.co.uk>

	* mathieu_workspace.c (gsl_sf_mathieu_free): handle NULL argument
	in free

2009-05-13  Brian Gough  <bjg@network-theory.co.uk>
